fix horizontal scroll

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -25,8 +25,3 @@ body,
   box-sizing: border-box;
   overflow-x: clip;
 }
-
-
-* {
-  box-sizing: border-box;
-}
