--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -10,19 +10,16 @@ $secondary: #d9d9d9;
 }
 
 @mixin font-secondary {
-
   font-family: "Cormorant SC", serif;
   font-weight: 400;
   font-style: normal;
 }
 
 @mixin font-fourth {
- 
   font-family: "Marcellus SC", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
-
 
 @mixin font-tertiary {
   font-family: "Montserrat", sans-serif;
@@ -53,8 +50,18 @@ $desktop: 1440px;
 }
 
 @mixin horizontal-padding {
-  padding-left: clamp(32px, 10vw, 127px);
-  padding-right: clamp(32px, 10vw, 127px);
+  padding-left: 127px;
+  padding-right: 127px;
+
+  @media (max-width: $tablet) {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  @media (max-width: $mobile) {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
 
 @mixin grid-content {
